added the title

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,25 @@
 
+.moodsContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  grid-template-rows: repeat(3, 80%);
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 100vh
+}
 
-   .moodsContainer {
-    display: grid;
-    grid-template-columns: repeat(3, 40%);
-    grid-template-rows: repeat(3, 30%);
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    height: 100vh
-   }
+.cell {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  text-align: left;
+}
 
-   .cell {
-    display: flex;
-    flex-direction: column;
-    width: 10vh;
-    text-align: left;
-    
-   }
+.pageHeader
+{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
