--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,11 @@
   width: 30vh;
   text-align: left;
   align-items: center;
-  width: 30%;
+  width: 28%;
+  border-style: double;
+  border-color: darkorange;
+  margin: 2%;
+  background-color:cornflowerblue;
 }
 
 .moodsContainer 
@@ -48,4 +52,18 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  background-color: antiquewhite;
+  margin: 2%;
+  padding: 1%;
+}
+
+.margin
+{
+  margin: auto;
+}
+
+.machoAdvice
+{
+  width: min-content;
+  margin-right: 2%;
 }
